# lmmkv

./: CMakeLists.txt  README.md  README.zh-CN.md
docs/: mkv_format_analysis.md
examples/: CMakeLists.txt  mkv_demuxer_demo.cpp  mkv_info.cpp
include/lmmkv/: ebml_reader.h  lmmkv_logger.h  matroska_parser.h  mkv_demuxer.h  mkv_listeners.h  mkv_muxer.h  mkv_types.h
src/: ebml_reader.cpp  ebml_reader.h  internal_logger.h  matroska_parser.cpp  mkv_demuxer.cpp  mkv_muxer.cpp
tests/: ebml_varint_test.cpp
