cmake_minimum_required(VERSION 3.10)

if(BUILD_EXAMPLES)
    add_executable(mkv_info mkv_info.cpp)
    target_include_directories(mkv_info PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
    # Prefer linking to static library during development
    if(TARGET lmmkv_static)
        target_link_libraries(mkv_info PRIVATE lmmkv_static)
    else()
        target_link_libraries(mkv_info PRIVATE lmmkv_shared)
    endif()
    target_compile_features(mkv_info PRIVATE cxx_std_17)

    add_executable(mkv_demuxer_demo mkv_demuxer_demo.cpp)
    target_include_directories(mkv_demuxer_demo PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
    if(TARGET lmmkv_static)
        target_link_libraries(mkv_demuxer_demo PRIVATE lmmkv_static)
    else()
        target_link_libraries(mkv_demuxer_demo PRIVATE lmmkv_shared)
    endif()
    target_compile_features(mkv_demuxer_demo PRIVATE cxx_std_17)
endif()
